tests/ui/borrowck/non-ADT-struct-pattern-box-pattern-ice-121463.stderr
error[E0433]: cannot find item `E` in this scope
  --> $DIR/non-ADT-struct-pattern-box-pattern-ice-121463.rs:6:17
   |
LL |     let mut a = E::StructVar { boxed: Box::new(5_i32) };
   |                 ^
   |                 |
   |                 use of undeclared type `E`
   |                 help: a trait with a similar name exists: `Eq`

error[E0433]: cannot find item `E` in this scope
  --> $DIR/non-ADT-struct-pattern-box-pattern-ice-121463.rs:9:9
   |
LL |         E::StructVar { box boxed } => { }
   |         ^
   |         |
   |         use of undeclared type `E`
   |         help: a trait with a similar name exists: `Eq`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
